# konstrukt

./: .editorconfig  .gitignore  .gitmodules  .local.vimrc  .luacheckrc  CMakeLists.txt  Conventions.md  LICENSE  README.md  Tupfile  Tuprules.tup  base-doxyfile.cfg  config.ini.sample  config.ld  layout.txt  merge-subtree.sh  meson.build  meson_options.txt  meta.json.in  package.json.in  todo.md  tup.config.osx-sample  tup.config.sample  tup.config.sample-linux  tup.config.sample-osx
_core/: DependencySortedList.lua  EventSource.lua  GlobalEventSource.lua  Matrix4.lua  Quaternion.lua  Resource.lua  Scenario.lua  Timer.lua
_core/audio/: AudioBuffer.lua  AudioSource.lua
_core/bootstrap/: init.lua  math.lua  path.lua  require.lua
_core/graphics/: Camera.lua  Image.lua  Light.lua  MeshBuffer.lua  Model.lua  Texture.lua  (+3 more)
cmake/: FindALURE.cmake  FindGLFW3.cmake  FindGLM.cmake  FindLua.cmake  FindPhysFS.cmake  FindZZipLib.cmake  LibFindWithPkgConfig.cmake
core/: AudioBuffer.lua  AudioListener.lua  AudioSource.lua  Camera.lua  CollisionShape.lua  Config.lua  Control.lua  Controlable.lua  Controllable.lua  Coroutine.lua  DefaultRenderTarget.lua  DependencySortedList.lua  Doxyfile  Effect.lua  EffectTarget.lua  EgoCameraController.lua  EventSource.lua  FileSystem.lua  Force.lua  Generators.lua  GlobalControls.lua  GraphicsObject.lua  HasTransformation.lua  Json.lua  Main.lua  Matrix4.lua  Mesh.lua  MeshBuffer.lua  Model.lua  ModelWorld.lua  OrthographicCamera.lua  PerspectiveCamera.lua  Quaternion.lua  RenderTarget.lua  Resource.lua  ResourceManager.lua  Scenario.lua  Scene.lua  Scheduler.lua  Shader.lua  (+16 more)
core-test/: Config.t  Control.t  DependencySortedList.t  Effect.t  FakeRequire.lua  Matrix4.t  Organization.t  ResourceManager.t  Vector.t  common.lua  luacheck.t
documentation/: Concurrency.md  Concurrency.xml  Coordinates.md  Packages.md  Static World.md  Structure.md
dummy/: Tupfile  core.h  exception_runner.cpp  signal_runner.c  tap_reporter.c  xml_reporter.c
engine/: Array.h  ArrayList.cpp  ArrayList.h  AttachmentTarget.cpp  AttachmentTarget.h  Audio.cpp  Audio.h  BitCondition.cpp  BitCondition.h  CMakeLists.txt  Camera.cpp  Camera.h  ChunkGenerator.cpp  ChunkGenerator.h  ChunkGeneratorShared.cpp  ChunkGeneratorShared.h  Common.cpp  Common.h  Config.cpp  Config.h  Constants.h.in  Controls.cpp  Controls.h  Crc32.cpp  Crc32.h  Debug.cpp  Doxyfile  Effects.cpp  ExecutableMain.cpp  FileSystem.cpp  FileSystem.h  FixedArray.h  FsUtils.cpp  FsUtils.h  Game.cpp  Game.h  Image.cpp  Image.h  JobManager.cpp  JobManager.h  (+63 more)
engine/ControlBindings/: Keyboard.cpp  Mouse.cpp
engine/LuaBindings/: Audio.cpp  Audio.h  Camera.cpp  Controls.cpp  Effects.cpp  Effects.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  MeshBuffer.cpp  MeshBuffer.h  ModelManager.cpp  ModelManager.h  ModelWorld.cpp  ModelWorld.h  PhysFS.cpp  PhysFS.h  PhysicsManager.cpp  PhysicsManager.h  Player.cpp  Player.h  RenderManager.cpp  RenderManager.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/control_bindings/: Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Tupfile
engine/lua_bindings/: AttachmentTarget.cpp  AttachmentTarget.h  Audio.cpp  Audio.h  Camera.cpp  Camera.h  ChunkGenerator.cpp  ChunkGenerator.h  Config.cpp  Config.h  Controls.cpp  Controls.h  Image.cpp  Image.h  JobManager.cpp  JobManager.h  LightWorld.cpp  LightWorld.h  LuaBuffer.cpp  LuaBuffer.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  MeshBuffer.cpp  MeshBuffer.h  MeshChunkGenerator.cpp  MeshChunkGenerator.h  ModelWorld.cpp  ModelWorld.h  PhysFS.cpp  PhysFS.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsWorld.cpp  PhysicsWorld.h  RenderManager.cpp  RenderManager.h  RenderTarget.cpp  RenderTarget.h  (+12 more)
engine/profiler/: MicroProfile.cpp  MicroProfile.h  Remotery.cpp  Remotery.h
engine/tests/: Array.cpp  ArrayList.cpp  BitCondition.cpp  CMakeLists.txt  ChunkGeneratorShared.cpp  Common.cpp  Config.cpp  Crc32.cpp  FixedArray.cpp  FsUtils.cpp  Image.cpp  JobManager.cpp  JobManagerBenchmark.cpp  Lua.cpp  LuaBuffer.cpp  LuaBufferBenchmark.cpp  Math.cpp  MeshBuffer.cpp  ObjectSystem.cpp  ObjectSystemPerformance.cpp  PhysicsManager.cpp  PhysicsWorld.cpp  TestTools.cpp  TestTools.h  Time.cpp  Tupfile  Tuprules.tup  Vfs.cpp  meson.build
engine/tests/config/: Test.ini
engine/tests/lua/: Test.lua
engine/tests/stubs/: Tupfile
engine/tests/unittests/: ConfigBah.cpp  Tupfile
engine/vfs/: PhysFS.cpp  PhysFS.h  Real.cpp  Real.h  Shared.h
notes/: Brainstorming.md  GamePlay.md  GamePlay.txt  LuaTipps.md  README.md  ScenarioSplitPersonality.txt  Story.md  Threading.txt  Voxel+Structures.md  particle-notes.txt
res/: config.ini  config.ini.sample
src/: .ycm_extra_conf.py  Audio.cpp  Audio.h  Background.cpp  Background.h  Common.cpp  Common.h  Config.cpp  Config.h  Controls.cpp  Controls.h  Debug.cpp  Debug.h  Effects.cpp  Effects.h  Game.cpp  Game.h  Image.cpp  Image.h  JoystickBindings.cpp  JoystickBindings.h  Json.cpp  Json.h  KeyboardBindings.cpp  KeyboardBindings.h  Lua.cpp  Lua.h  Main.cpp  Map.cpp  Map.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  MeshBuffer.cpp  MeshBuffer.h  Model.cpp  Model.h  MouseBindings.cpp  MouseBindings.h  (+22 more)
subprojects/Remotery/: Remotery.c  Remotery.h.in  meson.build
subprojects/dbgtools/: meson.build
subprojects/dummy/: meson.build
subprojects/glad/: glad.py  meson.build
subprojects/lua-cjson/: lua_cjson.h  meson.build  meson_options.txt
subprojects/lua-taggedcoro/: lua_taggedcoro.h  meson.build  meson_options.txt
subprojects/microprofile/: meson.build  microprofile.cpp  microprofile.h.in
subprojects/stb/: konstrukt_stb_image.c  konstrukt_stb_image.h  konstrukt_stb_image_resize.c  konstrukt_stb_image_resize.h  konstrukt_stb_sprintf.c  konstrukt_stb_sprintf.h  meson.build
subprojects/tinycthread/: meson.build
t/: Tupfile  bdd.cpp  core.c  test.t  test_reporter.c  test_reporter.h
test/: GenTests.tup  Lua.cpp  PhysicsManager.cpp  Test.cpp  TestCore.cpp  TestCore.h  TestTools.cpp  TestTools.h  Tupfile  Tuprules.tup
tools/: ExportJSON.py  gen_stubs.py
(+240 files in other folders)
