option(KONSTRUKT_BUILD_TESTS "Build native tests")
if(KONSTRUKT_BUILD_TESTS)
    macro(AddTest TestName)
        add_executable(${TestName}.t ${TestName}.cpp TestTools.cpp)
        target_link_libraries(${TestName}.t konstruktlib dummy)
    endmacro()
    AddTest(Common)
    AddTest(Math)
    AddTest(ArrayList)
endif()
