option(KONSTRUKT_BUILD_TESTS "Build native tests")
if(KONSTRUKT_BUILD_TESTS)
    macro(AddTest TestName)
        add_executable(${TestName}.t ${TestName}.cpp TestTools.cpp)
        target_link_libraries(${TestName}.t konstruktlib dummy)
    endmacro()
    AddTest(ArrayList)
    AddTest(BitCondition)
    AddTest(Config)
    AddTest(Common)
    AddTest(Lua)
    AddTest(Math)
    AddTest(MeshBuffer)
    AddTest(PhysicsManager)
    AddTest(Time)
    AddTest(Vfs)

    file(COPY data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endif()
